gitops/apps/homepage/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
