gitops/apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Platform
    gethomepage.dev/name: HomePage
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/description: Homelab dashboard
    gethomepage.dev/pod-selector: "app=homepage"
    gethomepage.dev/href: "http://homepage.home.arpa"
spec:
  ingressClassName: traefik
  rules:
    - host: homepage.omerlevy03.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
    - host: homepage.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
